# calculator

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cc
src/backend/: CMakeLists.txt  Makefile  cmake_install.cmake
src/frontend/: CMakeLists.txt  Makefile  app.cc  app.h  cmake_install.cmake  window.cc  window.h
